<resources>
    <string name="app_name">Weather Application</string>
    <string name="today">Today</string>
    <string name="photos">Photos</string>
    <string name="weekly">Weekly</string>
    <string name="icon_image">Icon image</string>
    <string name="information_icon">Information icon</string>
    <string name="degree_fahrenheit">&#xb0;F</string>
    <string name="degree_celcius">&#xb0;C</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="wind_icon">Wind icon</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="visibility_icon">Visibility Icon</string>
    <string name="visibility">Visibility</string>
    <string name="pressure_icon">Pressure Icon</string>
    <string name="pressure">Pressure</string>
    <string name="percent_symbol"> %</string>
    <string name="windSpeed_unit"> mph</string>
    <string name="visibility_unit"> km</string>
    <string name="space">\u0020</string>
    <string name="pressure_unit">mb</string>
    <string name="loading">Loading</string>
    <string name="card_image">Card Image</string>
    <string name="search_title">Search</string>
    <string name="search_menu_hint">Please enter a city name to search..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="sunrise_time">Sunrise Time</string>
    <string name="precipitation">Precipitation</string>
    <string name="summary">Summary</string>
    <string name="temperature_high">Temperature High</string>
    <string name="cloud_cover">Cloud cover</string>
    <string name="precipitation_unit">mmph</string>
    <string name="temperature_low">Temperature Low</string>
    <string name="ozone">Ozone</string>
    <string name="temperature">Temperature</string>
    <string name="city_image">City Image</string>
    <string name="weekly_summary_icon">Weekly Summary Icon</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_tab">FAVORITES</string>
    <string name="mark_unmark_as_favorites">Mark/Unmark as Favorites</string>
    <string name="settings">Settings</string>
    <string name="floatingActionButton">FloatingActionButton</string>
    <string name="no_internet_connection_found">No internet connection found</string>
    <string name="warning_image">Warning image</string>
    <string name="refresh"><u>Refresh</u></string>
</resources>